fixed glitch where mobile user cards were squishing

--- a/frontend/src/styles/UserCardList.css
+++ b/frontend/src/styles/UserCardList.css
@@ -67,6 +67,7 @@
   align-items: center;
 
   max-height: 80px;
+  min-height: 80px;
   width: 100%;
   margin: 0 0 10px;
   padding: 20px 0;
